Fix alignment issues and min-age max-age styling

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -516,14 +516,19 @@ input#search_max_age{
 
 select#profile_partner_attributes_province{
   display: inline;
+  height: 2rem;
+  margin-left: 2%;
 }
 
 select#profile_pair_programmer_attributes_province{
   display: inline;
+  height: 2rem;
+  margin-left: 2%;
 }
 
 select#profile_province{
   display: inline;
+  height: 2rem;
 }
 
 
@@ -1147,9 +1152,12 @@ textarea#message_message{
     margin-bottom: 2%;
     border-radius: 2px;
   }
+  input#profile_birthday{
+    margin-left: -1%;
+  }
   .form_input input{
     width: 40%;
-    height: 1.7rem;
+    height: 2rem;
     border-color: #6a6a6a;
     border-width: 0.5px;
     border-radius: 5px;
@@ -1164,6 +1172,8 @@ textarea#message_message{
     width: 20%;
     font-size: 1rem;
   }
+
+
 
   textarea#profile_about_me{
     width: 40%;
@@ -1238,10 +1248,12 @@ textarea#message_message{
 
   select#profile_partner_attributes_province{
     display: inline;
+    margin-left: 2%;
   }
 
   select#profile_pair_programmer_attributes_province{
     display: inline;
+    margin-left: 2%;
   }
 
   #remove_language{
@@ -1448,11 +1460,13 @@ textarea#message_message{
     width: 25%;
     display: inline;
     margin-left: 5%;
+    height: 2rem;
   }
   select#search_province{
     width: 25%;
     display: inline;
     margin-left: 1%;
+    height: 2rem;
   }
 
   input#submit{
@@ -1503,8 +1517,8 @@ textarea#message_message{
 
   input#search_min_age{
     width: 20%;
-    height: 1.5rem;
-    font-size: 0.7rem;
+    height: 2.0rem;
+    font-size: 1rem;
     border-width: 3px;
     display: inline;
     margin-left: 2.5%;
@@ -1515,8 +1529,8 @@ textarea#message_message{
   }
   input#search_max_age{
     width: 20%;
-    height: 1.5rem;
-    font-size: 0.7rem;
+    height: 2.0rem;
+    font-size: 1rem;
     border-width: 3px;
     display: inline;
     margin-left: 2.5%;
